# steganography

./: CMakeLists.txt
include/: bmp.h  steg.h
src/: bmp.c  main.c  steg.c
tests/: CMakeLists.txt  test_steg.cpp
